# FloodHKAgent

./: .env.example  .gitignore  API_Endpoints.md  README.md  plan.md  pyproject.toml
app/: __init__.py  main.py  settings.py
app/agents/: __init__.py  base.py  compound_detector.py  forecast_agent.py  lightning_agent.py  rainfall_agent.py  synthesis_agent.py  tide_agent.py  warning_agent.py
app/api/: __init__.py  endpoints.py  hko_client.py
app/config/: __init__.py  data.py
app/frontend/: app.js  index.html  styles.css
app/interfaces/: __init__.py  api.py  cli.py
app/models/: __init__.py  schemas.py
app/prompts/: __init__.py  compound_system.txt  forecast_system.txt  lightning_system.txt  loader.py  rainfall_system.txt  synthesis_system.txt  tide_system.txt  warning_system.txt
app/services/: __init__.py  auto_runner.py  export_run_txt.py  letta.py  llm.py  logger.py  orchestrator.py  prediction_learning.py  run_history.py  utils.py
hk_flood_swarm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py
tests/integration/: letta_smoke_test.py  test_orchestrator.py
tests/unit/: test_api_frontend.py  test_auto_runner.py  test_dotenv_loading.py  test_hko_client.py  test_peer_queries.py  test_prediction_learning.py  test_settings.py  test_tide_agent.py  test_utils.py
